kubernetes/apps/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  annotations:
    secrets.reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
